--- a/config/settings.json
+++ b/config/settings.json
@@ -1,10 +1,10 @@
 {
     "lab_name": "Laboratoire TDW",
-    "lab_description": "École Supérieure d&#039;Informatique",
+    "lab_description": "École Supérieure d&amp;amp;#039;Informatique",
     "lab_email": "contact@lab-tdw.dz",
     "lab_phone": "+213 (0)21 XX XX XX",
     "lab_address": "Alger, Algérie",
-    "lab_logo": "logo_1767347888.png",
+    "lab_logo": "logo_1768340414.png",
     "facebook_url": "",
     "twitter_url": "",
     "linkedin_url": "",
